--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ImagesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ImagesDictionary.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--Left arrow-->
     <DrawingBrush x:Key="LeftArrowDrawing" Stretch="Uniform">
         <DrawingBrush.Drawing>
             <DrawingGroup>
@@ -43,6 +44,7 @@
         </DrawingBrush.Drawing>
     </DrawingBrush>
 
+    <!--Right arrow-->
     <DrawingBrush x:Key="RightArrowDrawing" Stretch="Uniform">
         <DrawingBrush.Drawing>
             <DrawingGroup>
@@ -86,7 +88,7 @@
         </DrawingBrush.Drawing>
     </DrawingBrush>
 
-    <DrawingBrush x:Key="RedoArrowDrawing" Stretch="Uniform">
+    <!--<DrawingBrush x:Key="RedoArrowDrawing" Stretch="Uniform">
         <DrawingBrush.Drawing>
             <DrawingGroup>
                 <DrawingGroup>
@@ -141,127 +143,7 @@
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingBrush.Drawing>
-    </DrawingBrush>
-
-    <DrawingBrush x:Key="MagnifierDrawing" Stretch="Uniform">
-        <DrawingBrush.Drawing>
-            <DrawingGroup>
-                <DrawingGroup>
-                    <DrawingGroup>
-                        <GeometryDrawing Geometry="F1M32.259,73.440C18.965,73.564 8.529,75.441 6.728,78.426 6.582,78.667 6.694,78.918 6.665,79.162 6.665,79.165 6.666,79.169 6.665,79.173 6.418,79.409 6.034,79.626 5.884,79.876 3.241,84.253 16.859,89.010 36.290,90.504 45.757,91.232 54.821,91.043 61.978,90.159 62.166,90.250 62.282,90.356 62.540,90.437L66.665,91.742C67.261,92.427,69.319,93.127,71.790,93.884L105.821,106.141C110.259,107.499 117.390,107.633 121.821,106.431 126.253,105.229 126.259,103.160 121.821,101.802L81.415,91.274C78.967,90.525,76.668,89.931,74.353,89.713L70.415,88.486C73.370,87.607 75.500,86.542 76.259,85.285 76.415,85.026 76.339,84.765 76.384,84.504 76.629,84.283 76.992,84.081 77.134,83.846 79.536,79.867 65.721,75.425 46.290,73.931 41.432,73.557 36.690,73.399 32.259,73.440z">
-                            <GeometryDrawing.Brush>
-                                <LinearGradientBrush StartPoint="54.889,107.468" EndPoint="54.889,70.559" MappingMode="Absolute" SpreadMethod="Pad">
-                                    <GradientStop Color="Black" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#00000000" Offset="1" ></GradientStop>
-                                </LinearGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <DrawingGroup Transform="-0.832347989082336,-0.0330582596361637,0.103357002139091,-0.241701006889343,85.8411102294922,98.4462509155273">
-                            <GeometryDrawing Geometry="M74.499,56.911A24.244,21.592,0.000,1,1,26.011,56.911A24.244,21.592,0.000,1,1,74.499,56.911z">
-                                <GeometryDrawing.Brush>
-                                    <LinearGradientBrush StartPoint="35.358,27.844" EndPoint="54.798,57.94" MappingMode="Absolute" SpreadMethod="Pad">
-                                        <GradientStop Color="White" Offset="0" ></GradientStop>
-                                        <GradientStop Color="Transparent" Offset="1" ></GradientStop>
-                                    </LinearGradientBrush>
-                                </GeometryDrawing.Brush>
-                            </GeometryDrawing>
-                        </DrawingGroup>
-                        <GeometryDrawing Geometry="F1M75.484,45.441C72.841,57.704 54.926,64.260 35.495,60.073 16.064,55.887 2.438,42.535 5.080,30.271 7.723,18.007 25.638,11.452 45.069,15.639 64.500,19.825 78.126,33.177 75.484,45.441z M72.410,42.608C70.385,52.011 54.547,56.584 37.059,52.816 19.571,49.048 7.021,38.359 9.047,28.956 11.073,19.554 26.911,14.981 44.399,18.749 61.887,22.517 74.436,33.206 72.410,42.608z">
-                            <GeometryDrawing.Brush>
-                                <LinearGradientBrush StartPoint="5.08,30.271" EndPoint="75.484,45.441" MappingMode="Absolute" SpreadMethod="Reflect">
-                                    <GradientStop Color="#FFC6C6C6" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#FF434343" Offset="0.135" ></GradientStop>
-                                    <GradientStop Color="#FFF9F9F9" Offset="0.647" ></GradientStop>
-                                    <GradientStop Color="#FFBCBCBC" Offset="1" ></GradientStop>
-                                </LinearGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <GeometryDrawing Geometry="F1M76.354,41.401C73.952,52.550 56.232,58.201 36.801,54.014 17.369,49.827 3.549,37.381 5.951,26.232 8.353,15.083 26.073,9.432 45.504,13.619 64.936,17.805 78.756,30.252 76.354,41.401z M73.240,38.757C71.398,47.305 55.710,51.184 38.222,47.416 20.734,43.648 8.035,33.653 9.877,25.105 11.719,16.558 27.407,12.678 44.895,16.446 62.383,20.215 75.082,30.210 73.240,38.757z">
-                            <GeometryDrawing.Brush>
-                                <RadialGradientBrush Center="370,315.219" RadiusX="261.429" RadiusY="261.429" GradientOrigin="370,315.219" MappingMode="Absolute" Transform="0.0877933278679848,0.0189159903675318,-0.0115365507081151,0.0535437017679214,12.305549621582,9.93952560424805">
-                                    <GradientStop Color="#FFC6C6C6" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#FF434343" Offset="0.135" ></GradientStop>
-                                    <GradientStop Color="#FFF9F9F9" Offset="0.647" ></GradientStop>
-                                    <GradientStop Color="#FFBCBCBC" Offset="1" ></GradientStop>
-                                </RadialGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <GeometryDrawing Geometry="F1M44.204,18.703C60.407,22.194 72.205,31.616 72.264,40.461 68.740,47.736 54.237,50.862 38.028,47.369 21.818,43.877 9.864,35.051 9.648,26.970 13.345,18.934 28.001,15.211 44.204,18.703z">
-                            <GeometryDrawing.Brush>
-                                <RadialGradientBrush Center="59.083,64.481" RadiusX="38.703" RadiusY="38.703" GradientOrigin="59.083,64.481" MappingMode="Absolute" Transform="0.806721985340118,0.184246003627777,-0.0975814685225487,0.427262008190155,0.33424898982048,3.7053689956665">
-                                    <GradientStop Color="#FF0076C8" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#FF79C8FF" Offset="1" ></GradientStop>
-                                </RadialGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <GeometryDrawing Geometry="F1M44.383,18.822C28.169,15.329 13.433,18.785 9.814,26.542 9.827,26.918 9.893,27.295 9.959,27.675 14.399,20.689 28.471,17.705 43.907,21.031 59.344,24.357 70.943,32.871 72.111,41.066 72.327,40.749 72.540,40.430 72.706,40.093 72.602,31.533 60.597,22.315 44.383,18.822z">
-                            <GeometryDrawing.Brush>
-                                <RadialGradientBrush Center="368.571,134.996" RadiusX="233.563" RadiusY="233.563" GradientOrigin="368.571,134.996" MappingMode="Absolute" Transform="0.200573995709419,0.0432157181203365,-0.0211297012865543,0.0980675667524338,-30.0395603179932,5.20362710952759">
-                                    <GradientStop Color="#00000000" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#00000000" Offset="0.5" ></GradientStop>
-                                    <GradientStop Color="Black" Offset="1" ></GradientStop>
-                                </RadialGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <DrawingGroup Transform="-0.832347989082336,-0.0656103864312172,0.103357002139091,-0.479701012372971,85.8411102294922,70.4976501464844">
-                            <GeometryDrawing Geometry="M74.499,56.911A24.244,21.592,0.000,1,1,26.011,56.911A24.244,21.592,0.000,1,1,74.499,56.911z">
-                                <GeometryDrawing.Brush>
-                                    <LinearGradientBrush StartPoint="35.358,27.844" EndPoint="54.798,57.94" MappingMode="Absolute" SpreadMethod="Pad">
-                                        <GradientStop Color="White" Offset="0" ></GradientStop>
-                                        <GradientStop Color="Transparent" Offset="1" ></GradientStop>
-                                    </LinearGradientBrush>
-                                </GeometryDrawing.Brush>
-                            </GeometryDrawing>
-                        </DrawingGroup>
-                        <GeometryDrawing Geometry="F1M76.354,41.401C73.952,52.550 56.232,58.201 36.801,54.014 17.369,49.827 3.549,37.381 5.951,26.232 8.353,15.083 26.073,9.432 45.504,13.619 64.936,17.805 78.756,30.252 76.354,41.401z M73.240,38.757C71.398,47.305 55.710,51.184 38.222,47.416 20.734,43.648 8.035,33.653 9.877,25.105 11.719,16.558 27.407,12.678 44.895,16.446 62.383,20.215 75.082,30.210 73.240,38.757z">
-                            <GeometryDrawing.Brush>
-                                <RadialGradientBrush Center="370,315.219" RadiusX="261.429" RadiusY="261.429" GradientOrigin="370,315.219" MappingMode="Absolute" Transform="0.0877933278679848,0.0189159903675318,-0.0115365507081151,0.0535437017679214,12.305549621582,9.93952560424805">
-                                    <GradientStop Color="#FFC6C6C6" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#FF434343" Offset="0.135" ></GradientStop>
-                                    <GradientStop Color="#FFF9F9F9" Offset="0.647" ></GradientStop>
-                                    <GradientStop Color="#FFBCBCBC" Offset="1" ></GradientStop>
-                                </RadialGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <DrawingGroup Transform="0.832347989082336,0.0656103864312172,-0.103357002139091,0.479701012372971,-3.64425301551819,-1.32744204998016">
-                            <GeometryDrawing Geometry="M74.499,56.911A24.244,21.592,0.000,1,1,26.011,56.911A24.244,21.592,0.000,1,1,74.499,56.911z">
-                                <GeometryDrawing.Brush>
-                                    <LinearGradientBrush StartPoint="35.358,27.844" EndPoint="54.798,57.94" MappingMode="Absolute" SpreadMethod="Pad">
-                                        <GradientStop Color="White" Offset="0" ></GradientStop>
-                                        <GradientStop Color="Transparent" Offset="1" ></GradientStop>
-                                    </LinearGradientBrush>
-                                </GeometryDrawing.Brush>
-                            </GeometryDrawing>
-                        </DrawingGroup>
-                        <DrawingGroup Transform="0.750042974948883,0.661388993263245,-0.777279019355774,0.629155993461609,0,0">
-                            <GeometryDrawing Geometry="M81.884,-5.327L101.717,-5.327 101.717,4.113 81.884,4.113z">
-                                <GeometryDrawing.Brush>
-                                    <LinearGradientBrush StartPoint="90.561,4.113" EndPoint="90.561,-5.404" MappingMode="Absolute" SpreadMethod="Pad">
-                                        <GradientStop Color="#FFC6C6C6" Offset="0" ></GradientStop>
-                                        <GradientStop Color="#FF434343" Offset="0.135" ></GradientStop>
-                                        <GradientStop Color="#FFF9F9F9" Offset="0.647" ></GradientStop>
-                                        <GradientStop Color="#FFBCBCBC" Offset="1" ></GradientStop>
-                                    </LinearGradientBrush>
-                                </GeometryDrawing.Brush>
-                            </GeometryDrawing>
-                        </DrawingGroup>
-                        <GeometryDrawing Geometry="F1M67.793,59.018C72.225,55.651,76.180,58.423,80.617,62.228L121.031,91.728C125.468,95.533 125.472,101.306 121.040,104.673 116.609,108.040 109.469,107.688 105.031,103.883L70.988,69.543C66.551,65.739,63.362,62.385,67.793,59.018z">
-                            <GeometryDrawing.Brush>
-                                <RadialGradientBrush Center="-44.12,189.283" RadiusX="30.862" RadiusY="30.862" GradientOrigin="-44.12,189.283" MappingMode="Absolute" Transform="1.93799901008606,6.58290289683519E-16,-5.0071420940696E-16,1.63372397422791,-4.55424499511719,-86.1881790161133">
-                                    <GradientStop Color="#FFC6C6C6" Offset="0" ></GradientStop>
-                                    <GradientStop Color="#FF434343" Offset="0.135" ></GradientStop>
-                                    <GradientStop Color="#FFF9F9F9" Offset="0.647" ></GradientStop>
-                                    <GradientStop Color="#FFBCBCBC" Offset="1" ></GradientStop>
-                                </RadialGradientBrush>
-                            </GeometryDrawing.Brush>
-                        </GeometryDrawing>
-                        <GeometryDrawing Brush="#4AFFFFFF" Geometry="F1M71.870,59.132C71.285,59.133 70.694,59.246 70.141,59.483 70.010,59.534 69.961,59.604 69.841,59.658 71.804,60.463 73.776,61.936 75.853,63.716L116.259,93.226C120.014,96.446 120.559,101.060 117.963,104.448 121.263,103.101 123.566,100.245 122.296,96.182 118.344,89.896 110.618,87.010 105.137,82.129 94.538,74.690 84.422,66.474 73.598,59.433 73.035,59.244 72.455,59.132 71.870,59.132z" ></GeometryDrawing>
-                    </DrawingGroup>
-                </DrawingGroup>
-            </DrawingGroup>
-        </DrawingBrush.Drawing>
-    </DrawingBrush>
-
+    </DrawingBrush>-->    
     
     <!--Flat magnifier drawing-->
     <SolidColorBrush x:Key="MagnifierBrush" Color="Gainsboro" ></SolidColorBrush>
